# logs

./: .gitignore  README.md  main.py  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/multi_class_logs_20260117/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/poc_20260117/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/real_world_logs_20260117/: index.md  metadata.json  plan.md  spec.md
config/: config.yaml
notebooks/: data_exploration.ipynb
src/: config.py  data_loader.py  downloader.py  embedder.py  generator.py  reporter.py  trainer.py
